--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -16,7 +16,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logIn.controllers.RegistrationController">
    <children>
       <GridPane alignment="center" hgap="10" prefHeight="521.0" prefWidth="621.0" style="-fx-background-color: D58480;" vgap="10">
@@ -24,6 +23,7 @@
           <padding>
               <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
           </padding>
+         <ImageView fitHeight="44.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="19" />
          <ImageView fitHeight="51.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="19">
             <image>
                <Image url="@Untitled9.png" />
@@ -45,7 +45,6 @@
       
           <Text fx:id="registrationMessage" GridPane.columnIndex="3" GridPane.rowIndex="16" />
           <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-         <Button fx:id="backToLogin" mnemonicParsing="false" onAction="#backToLogIn" style="-fx-background-color: transparent;" GridPane.columnIndex="4" GridPane.rowIndex="19" />
          <ImageView fitHeight="32.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
             <image>
                <Image url="@person-icons-android-username-icon-ios-11553402461wnwwgdi6wz.png" />
@@ -57,7 +56,7 @@
             </image>
          </ImageView>
            <Button fx:id="RegButton" onAction="#handleRegisterAction" prefHeight="25.0" prefWidth="109.0" style="-fx-background-color: white;" text="Confirm register" GridPane.columnIndex="4" GridPane.rowIndex="8" />
-         <ImageView fitHeight="44.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="19" />
+         <Button fx:id="backToLogin" mnemonicParsing="false" onAction="#backToLogIn" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: transparent;" GridPane.columnIndex="4" GridPane.rowIndex="19" />
          <columnConstraints>
             <ColumnConstraints />
             <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
