--- a/src/main/resources/CustomerLogOut.fxml
+++ b/src/main/resources/CustomerLogOut.fxml
@@ -2,13 +2,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: D58490;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logOut.logOutController">
    <children>
-      <Label layoutX="48.0" layoutY="62.0" text="Hello,  customer!" />
-      <Label layoutX="195.0" layoutY="154.0" text="Do you want to place another order?" />
-      <Button fx:id="backToCustomerMain" layoutX="169.0" layoutY="216.0" mnemonicParsing="false" onAction="#backToCustomerMain" text="Yes, back to menu" />
-      <Button fx:id="CustomerLogOut" layoutX="345.0" layoutY="216.0" mnemonicParsing="false" onAction="#logout1" text="No, log out" />
+      <Label layoutX="72.0" layoutY="50.0" prefHeight="43.0" prefWidth="157.0" text="Hello,  customer!">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+      <Label layoutX="118.0" layoutY="94.0" prefHeight="86.0" prefWidth="381.0" text="Do you want to place another order?">
+         <font>
+            <Font name="System Bold" size="21.0" />
+         </font></Label>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="97.0" layoutY="166.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@674-6742442_return-function-ui-navigation-menu-back-to-menu.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="143.0" layoutX="314.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@download%20(3).png" />
+         </image>
+      </ImageView>
+      <Button fx:id="CustomerLogOut" layoutX="319.0" layoutY="168.0" mnemonicParsing="false" onAction="#logout1" prefHeight="143.0" prefWidth="127.0" style="-fx-background-color: transparent;" />
+      <Button fx:id="backToCustomerMain" layoutX="103.0" layoutY="170.0" mnemonicParsing="false" onAction="#backToCustomerMain" prefHeight="139.0" prefWidth="127.0" style="-fx-background-color: transparent;" />
    </children>
 </AnchorPane>
