--- a/src/main/resources/FormInterface.fxml
+++ b/src/main/resources/FormInterface.fxml
@@ -17,19 +17,19 @@
             <Label layoutX="16.0" layoutY="56.0" text="Food ingredients" textFill="#faf0c5" />
             <Label layoutX="16.0" layoutY="98.0" text="Preparation Time" textFill="#faf0c5" />
             <Label layoutX="16.0" layoutY="141.0" text="Food Picture" textFill="#faf0c5" />
-            <TextField fx:id="txt_filename" layoutX="128.0" layoutY="137.0" />
+            <TextField fx:id="txt_filename" layoutX="128.0" layoutY="137.0" prefHeight="25.0" prefWidth="86.0" />
             <TextField fx:id="food_name" layoutX="128.0" layoutY="18.0" />
             <TextField fx:id="food_ingredients" layoutX="128.0" layoutY="60.0" />
             <ImageView fx:id="Picture" fitHeight="162.0" fitWidth="246.0" layoutX="13.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="Button_attach" layoutX="293.0" layoutY="137.0" mnemonicParsing="false" onAction="#AttachAction" prefHeight="25.0" prefWidth="61.0" text="Attach picture" />
+            <Button fx:id="Button_attach" layoutX="224.0" layoutY="137.0" mnemonicParsing="false" onAction="#AttachAction" prefHeight="25.0" prefWidth="105.0" text="Attach picture" />
 
-             <Button fx:id="Button_submit" layoutX="271.0" layoutY="185.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
+             <Button fx:id="Button_submit" layoutX="42.0" layoutY="238.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
             <TextField fx:id="prep_time" layoutX="128.0" layoutY="94.0" />
             <TextField fx:id="price" layoutX="129.0" layoutY="177.0" prefHeight="25.0" prefWidth="108.0" />
             <Label layoutX="17.0" layoutY="181.0" text="Price" textFill="#faf0c5" />
-            <Button fx:id="ShowButton" layoutX="271.0" layoutY="309.0" mnemonicParsing="false" onAction="#ShowData" text="Show Menu" />
-            <Button fx:id="Button_delete" layoutX="272.0" layoutY="267.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
-            <Button fx:id="UpdatefoodTime" layoutX="270.0" layoutY="226.0" mnemonicParsing="false" onAction="#UpdateTime" text="Update_time" />
+            <Button fx:id="ShowButton" layoutX="162.0" layoutY="278.0" mnemonicParsing="false" onAction="#ShowData" text="Show Menu" />
+            <Button fx:id="Button_delete" layoutX="163.0" layoutY="238.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
+            <Button fx:id="UpdatefoodTime" layoutX="41.0" layoutY="278.0" mnemonicParsing="false" onAction="#UpdateTime" text="Update_time" />
             <TableView fx:id="table" layoutX="355.0" layoutY="14.0" prefHeight="295.0" prefWidth="380.0">
               <columns>
                 <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
@@ -39,8 +39,7 @@
                   <TableColumn fx:id="time" prefWidth="75.0" text="Time" />
               </columns>
             </TableView>
-            <Button fx:id="show" layoutX="554.0" layoutY="321.0" mnemonicParsing="false" onAction="#ViewAdmin" text="Show forms" />
-            <Button fx:id="logIn" layoutX="285.0" layoutY="346.0" mnemonicParsing="false" onAction="#goToLogin" text="Log in" />
+            <Button fx:id="show" layoutX="554.0" layoutY="321.0" mnemonicParsing="false" onAction="#ViewAdmin" text="Show menu" />
             <Button fx:id="BackToAdmin" layoutX="11.0" layoutY="372.0" mnemonicParsing="false" onAction="#backToAdmin" text="Back to admin menu" />
          </children></AnchorPane>
   </content>
