--- a/src/main/resources/OrdeList.fxml
+++ b/src/main/resources/OrdeList.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.OrderController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.OrderController">
    <children>
-      <ListView fx:id="listO" layoutX="49.0" layoutY="28.0" prefHeight="290.0" prefWidth="394.0" />
-      <Button fx:id="listOrder" layoutX="109.0" layoutY="329.0" mnemonicParsing="false" onAction="#getOrder" text="Button" />
+      <ListView fx:id="listO" layoutX="49.0" layoutY="28.0" prefHeight="290.0" prefWidth="517.0" />
+      <Button fx:id="listOrder" layoutX="427.0" layoutY="334.0" mnemonicParsing="false" onAction="#getOrder" prefHeight="39.0" prefWidth="149.0" text="Reload the order list">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
    </children>
 </AnchorPane>
